// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailNapPeilmerk should not render empty height 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Peilmerk label"
  title="NAP Peilmerk"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      hasMultiline={false}
      label="Hoogte NAP"
      value=""
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Omschrijving"
      value="Peilmerk description"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Windrichting"
      value=""
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailNapPeilmerk should not render without height 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Peilmerk label"
  title="NAP Peilmerk"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      hasMultiline={false}
      label="Hoogte NAP"
      value=""
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Omschrijving"
      value="Peilmerk description"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Windrichting"
      value=""
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailNapPeilmerk should render everything 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Peilmerk label"
  title="NAP Peilmerk"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      hasMultiline={false}
      label="Hoogte NAP"
      value="123,323 m"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Omschrijving"
      value="Peilmerk description"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Windrichting"
      value="W"
    />
    <MapDetailResultItem
      cm={true}
      hasMultiline={false}
      label="Muurvlakcoördinaten (cm)"
      value="2, 3"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;
